[package]
name = "tvl-live-back"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
fixture_rs = "0.0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["tokio-macros", "rt-multi-thread"] }
