[package]
name = "front"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlShader",
    "WebGlProgram",
    "WebGlBuffer",
    "WebGlVertexArrayObject",
    "console"
] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[lib]
crate-type = ["cdylib", "rlib"]
