[package]
name = "front"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
bevy = { version = "0.18.1", default-features = false, features = [
        "bevy_asset",
        "bevy_scene",
        "bevy_render",
        "bevy_core_pipeline",
        "bevy_sprite",
        "bevy_text",
        "bevy_ui",
        "bevy_ui_render",
        "bevy_winit",
        "bevy_dev_tools",
        "webgl2",
] }
web-sys = { version = "0.3", features = [
        "Window",
        "Document",
        "console"
] }

[lib]
crate-type = ["cdylib", "rlib"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

