[package]
name = "front"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
bevy = { version = "0.18.1", default-features = false, features = [
        "bevy_asset",
        "bevy_render",
        "bevy_core_pipeline",
        "bevy_sprite",
        "bevy_text",
        "bevy_dev_tools",
        "bevy_ui",
        "bevy_ui_render",
        "bevy_winit",
        "bevy_picking",
        "sprite_picking",
        "default_font",
        "webgl2",
] }
web-sys = { version = "0.3", features = [
        "Window",
        "Document",
        "console"
] }

[lib]
crate-type = ["cdylib", "rlib"]


